# suffix-tree-search

./: Cargo.toml
public/: index.html
public/js/: search.js
src/: handlers.rs  main.rs  routing.rs  suffix_tree.rs
text/: text.txt
