[package]
name = "suffix_tree"
version = "0.1.0"
authors = ["Anton Chernev <ss.a.chernev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4"
gotham_derive = "0.4.0"
askama = "0.8"
hyper = "0.12"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
